# ChangeLog for www-client/elinks
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-client/elinks/ChangeLog,v 1.118 2010/02/24 12:27:34 phajdan.jr Exp $

  24 Feb 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org> elinks-0.11.7.ebuild:
  Run econf in src_configure, to be QA-correct and avoid running ./configure
  twice, wrt bug #306629.

  23 Sep 2009; Alex Legler <a3li@gentoo.org> -elinks-0.11.3.ebuild,
  -elinks-0.11.4.ebuild:
  cleanup, security bug 285011

  15 Sep 2009; Michał Januszewski <spock@gentoo.org> elinks-0.11.7.ebuild:
  Fix bug #284818.

*elinks-0.11.7 (12 Sep 2009)

  12 Sep 2009; Patrick Lauer <patrick@gentoo.org> +elinks-0.11.7.ebuild:
  Bump, fixes #284677

*elinks-0.11.6 (08 Apr 2009)

  08 Apr 2009; Michał Januszewski <spock@gentoo.org> +elinks-0.11.6.ebuild:
  Version bump (bug #265302).

  21 Mar 2009; Michał Januszewski <spock@gentoo.org> elinks-0.11.5.ebuild:
  Drop all AUTO* variables (bug #260784).

  09 Mar 2009; Thomas Anderson <gentoofan23@gentoo.org>
  elinks-0.11.5.ebuild:
  stable amd64, bug 260193

  26 Feb 2009; Jeroen Roovers <jer@gentoo.org> elinks-0.11.5.ebuild:
  Stable for HPPA (bug #260193).

  26 Feb 2009; Raúl Porcel <armin76@gentoo.org> elinks-0.11.5.ebuild:
  alpha/sparc/x86 stable wrt #260193

  26 Feb 2009; Joseph Jezak <josejx@gentoo.org> elinks-0.11.5.ebuild:
  Marked ppc/ppc64 stable for bug #260193.

  30 Nov 2008; Michał Januszewski <spock@gentoo.org> elinks-0.11.3.ebuild,
  elinks-0.11.4.ebuild:
  Add a fix for bug #246575 for 0.11.3 and 0.11.4.

*elinks-0.11.5 (30 Nov 2008)

  30 Nov 2008; Michał Januszewski <spock@gentoo.org>
  files/elinks-0.11.3-lua-5.patch, +files/elinks-0.11.5-makefile.patch,
  +elinks-0.11.5.ebuild:
  Version bump. Remove junk content from the lua patch. This commit fixes
  bugs #246575, #248280, and #249020.

  26 Nov 2008; Brent Baude <ranger@gentoo.org> elinks-0.11.4.ebuild:
  stable ppc64, bug 239482
