@@ -10,8 +10,10 @@ DIST elinks-0.10.4.conf.bz2 5370 RMD160 5a0935ed8b035cd2f7636516b0e226a8065d1c70
 DIST elinks-0.11.5.tar.bz2 2589451 RMD160 397e5e94de8cd8c5dc9a1774b7485d6edf1a7c49 SHA1 90768912dbb7a77e328a25b43c3e484ae3e4be2f SHA256 f5ddb8f8c82d96c5d159bd01abd475a678fa15b8dba8f2d477b903b28f1204c3
 DIST elinks-0.11.6.tar.bz2 2577351 RMD160 b58477965684f77c852ea5275b4101eb84b37156 SHA1 c05e639cc656c2559a56e38f38b0cb40f19bc861 SHA256 9068f7160318cbee90f3218eb68cc341fff38b50f312da33a612e6352b4affa6
 DIST elinks-0.11.7.tar.bz2 2467915 RMD160 2e6e863d08f9accb71892ba6f236f795c83cba9c SHA1 d13edc1477d0ab32cafe7d3c1f3a23ae1c0a5c54 SHA256 456db6f704c591b1298b0cd80105f459ff8a1fc07a0ec1156a36c4da6f898979
+DIST elinks-0.12pre5.tar.bz2 2783523 RMD160 4983083f21928da78f937b4dea09f8937c3a9cb9 SHA1 15fb38fa938a0eec9d5f22fdd538a6785e2854af SHA256 2d19547831098acff0c5f97f9fbc7912240f122961fd49fb8b76738417dd24d2
 EBUILD elinks-0.11.5.ebuild 5055 RMD160 8a2cae785822a45ded49874aeb9803b58cda0e0e SHA1 9d40c62e37de627e9577549cdb307bcf4429910e SHA256 25fb0ac8004395f8b0ebbeb1f8db5ca42adcf2d6d1f5a6af80941bd4dc3ed6e6
 EBUILD elinks-0.11.6.ebuild 4730 RMD160 68b74b668a8ea0e5afc3c250f6ac35979e8138ff SHA1 399232e2d2eca271f7ed0071f0efadd4642ca04e SHA256 ebebc13e224e34a2dfff2b23efd4a5b7d08d886cc70aa71394aa6b74eff01a7b
 EBUILD elinks-0.11.7.ebuild 4710 RMD160 f7db711d94f31b137e95bac6b283371c1fe7bbe4 SHA1 6c212568b30c08990e3d3b4b489f00cc813fe46f SHA256 8901bd8d1afd0fe149fe3f4e04fcfc47975ddeb174bb7583bc8bd8d932ef3e24
-MISC ChangeLog 23509 RMD160 2795ae361873a0942a4e5b5936144e06efd16069 SHA1 f0f869d214c88cf9d4973f762feb5ad8c5768e58 SHA256 20b06469e1220c74cad1bbf318c044d703b37a97af7c0ac9f96ff603602946fb
+EBUILD elinks-0.12_pre5.ebuild 4719 RMD160 cbc7e85a7c9dae88ee9d4298343f63901f1ab520 SHA1 cdd5ff81fbea51b7d93f42b54c69fe571fae51c3 SHA256 9fa4b2eaa27bb6d5415c7722f0604523627d173a3808849f2e30b453c2d832d0
+MISC ChangeLog 23820 RMD160 dc9fcb5a7e30567d07a4295b249e6f79fb830b4c SHA1 a72128663a3fc3dae2924942138724f014a9b4b4 SHA256 02f82f80bd5dc7af6467a9883d2ae781b2af86110a701b1e9dcf9b24ca4a17f5
 MISC metadata.xml 475 RMD160 e888de64596f6e3707ee9adb6e6f3612740f1c94 SHA1 5cb61eb3f8afb550f9de204bd4203833b0dfe024 SHA256 bec4875969a65fe6ea9c2187ecc644d6105279f04dd4f82fd30bef71e6692e2f
